2005-12-14  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	
	Post-release version bump to 2.13.4.
	
	* src/load-graph.c: (get_load):
	* src/procman.h:
	
	Don't counts IOWAIT time as busy in the CPU graphs.
	Closes #324043.

2005-12-13  Benoît Dejean  <benoit@placenet.org>

	* NEWS:

	Released 2.13.3.

2005-12-12  James Henstridge  <james@jamesh.id.au>

	* src/Makefile.am: disable gconf schema install if $DESTDIR is
	set.

	* Makefile.am: ignore scrollkeeper database in the
	distuninstallcheck.  Remove intltool programs on distclean.

	* configure.in: modernise a bit, and add AC_DEFINE() descriptions
	so that things work without acconfig.h.

	* acconfig.h: remove obsolete file.

	* autogen.sh: require Automake 1.9.

2005-12-06  Benoît Dejean  <benoit@placenet.org>

	* src/bacon-message-connection.c:

	Synced with libbacon.

2005-12-06  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* src/procman.c: (procman_data_new):
	* src/procman.h:
	* src/proctable.c: (proctable_free_info), (procinfo_new):

	Let's have fun with g_slice_*.

2005-12-01  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* src/Makefile.am:
	* src/procactions.c: (renice_single_process),
	(kill_single_process):
	* src/procdialogs.c: (procman_action_to_command),
	(procdialog_create_root_password_dialog):
	* src/procdialogs.h:
	* src/procman_gksu.c: (procman_gksu_create_root_password_dialog):
	* src/procman_gksu.h:
	* src/procman_gnomesu.c: (procman_gnomesu_get_exec),
	(procman_gnomesu_create_root_password_dialog):
	* src/procman_gnomesu.h:

	Post release version bump to 2.13.3.

	Added Gksu support.
	Original patch by Sébastion Bacher <seb128@debian.org>
	from Ubuntu packaged.

	Splitted Gksu and Gnomesu implementations.

	TODO: fix password prompt.

2005-12-01  Benoît Dejean  <benoit@placenet.org>

	* src/procactions.c: (renice):
	* src/procactions.h:
	* src/procdialogs.c: (renice_dialog_button_pressed):

	Droped unused pid argument for renice().
