@@ -1,3 +1,10 @@
+2005-12-19  Benoît Dejean  <benoit@placenet.org>
+
+	* src/bacon-message-connection.c: (is_owned_by_user_and_socket),
+	(find_file_with_pattern), (socket_filename):
+	
+	Synced.
+
 2005-12-14  Benoît Dejean  <benoit@placenet.org>
 
 	* configure.in:
